Adicionando rota para atualizar cadastro existente
